ingress12.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-all
  annotations:
    appgw.ingress.kubernetes.io/heath-probe-status-code: "200-405"
  labels:
    app.kubernetes.io/name: ingress-for-all
spec:
  ingressClassName: azure-application-gateway 
  rules:
  - host: axionarayan.b18g103.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-ui
            port: 
              number: 80
  - host: query.b18g103.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: query-svc
            port: 
              number: 80
